--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "music_pc2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://9374.github.io/map",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.3",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.2",
     "md5": "^2.3.0",
