--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
          # 生成静态文件（export NODE_OPTIONS=--max_old_space_size=4096  解决JavaScript heap out of memory问题）
          - name: Build 📁
-           run: npm install && export NODE_OPTIONS=--max_old_space_size=4096 && npm run build
+           run: npm config set registry https://registry.npmmirror.com && npm install && export NODE_OPTIONS=--max_old_space_size=4096 && npm run build
 
          # 部署到 GitHub Pages
          - name: Deploy🚀
