--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,14 @@ jobs:
               persist-credentials: false
 
          # 生成静态文件（export NODE_OPTIONS=--max_old_space_size=4096  解决JavaScript heap out of memory问题）
+         - name: set npm
+           run: npm config set registry https://registry.npmmirror.com
+         - name: install npm
+           run: npm install 
+         - name: export
+           run: export NODE_OPTIONS=--max_old_space_size=4096
          - name: Build 📁
-           run: npm config set registry https://registry.npmmirror.com && npm install && export NODE_OPTIONS=--max_old_space_size=4096 && npm run build
+           run:  npm run build
 
          # 部署到 GitHub Pages
          - name: Deploy🚀
